# Tetr_CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tetr_cli_trace.txt
.github/workflows/: flake8.yml  linting.yml
Tetr_cli/: __init__.py  checker.py  main.old.py  main.py  main_menu.py  starter.py
Tetr_cli/tetr_modules/: __init__.py  checker.py  debug.py  mode.py  modes.py
Tetr_cli/tetr_modules/core/: base.py  board.py  constants.py  mino.py  solo_base.py
Tetr_cli/tetr_modules/modes/: __init__.py  board.py  constants.py  main_menu_mode.py  marathon_mode.py  marathon_mode_backup.py  mino.py  solo_menu_mode.py  solo_mode_menu.py  srs.py
Tetr_cli/tetr_modules/solo_core/: base.py  board.py  constants.py  mino.py
Tetr_cli/tetr_modules/sounds/bgm/: Ivean_Polkka.ftm  Korobeiniki.ftm  Korobeiniki_old.ftm  katyusha.ftm
Tetr_cli/tetr_modules/sounds/sfx/: Countdown.ftm  (+1 more)
Tetr_cli/tetr_prgm/: __init__.py  main.py  main_menu.py
tetr_cli/: main.py  starter.py
tetr_cli/keyboard_handlers/: curses_handler.py
tetr_cli/tetr_modules/: input_test.py  mode.py
tetr_cli/tetr_modules/keyboard_handlers/: __init__.py  curses_handler.py  pynput_handler.py
tetr_cli/tetr_modules/menu_core/: __init__.py  base_mode.py  menu_mode.py
tetr_cli/tetr_modules/modes/: main_menu_mode.py  marathon_mode.py  option_mode.py  score_screen_mode.py  solo_menu_mode.py
tetr_cli/tetr_modules/modules/: __init__.py  base_mode.py  checker.py  constants.py  database.py  debug.py  safe_curses.py  score.py  sound.py
tetr_cli/tetr_modules/solo_core/: __init__.py  base.py  board.py  mino.py  score.py  srs.py
(+24 files in other folders)
